--- a/index/11button.html
+++ b/index/11button.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>bytton 태그 테스트</title>
+  <title>button, textarea 태그 테스트</title>
 </head>
 <body>
   
@@ -26,4 +26,7 @@
 </body>
 <hr>
 
+<textarea rows="5" placeholder="설명을 입력하세요">
+</textarea>
+<!-- 여러줄 텍스트 입력하는 양식 rows: 줄 수 -->
 </html>
